# plating

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: agentnotify-doctor-missing.txt  agentnotify-doctor-ok.txt  agentnotify-init.txt  agentnotify-wiring.cast  agentnotify-wiring.json  agentpantry-setup.cast  agentpantry-setup.json  ap-doctor.txt  ap-init.txt  ap-keygen.txt  ap-status.txt  bd-status.txt  bootstrap-doctor-status.cast  bootstrap-doctor-status.json  brigade-doctor-out.txt  brigade-quickstart-out.txt  brigade-quickstart.cast  brigade-quickstart.json  brigade-version.txt  cg-notes-redacted.txt  cg-scan1.txt  cg-scan2.txt  content-guard-redact.cast  content-guard-redact.json  graphtrail-callers.txt  graphtrail-context.cast  graphtrail-context.json  graphtrail-context.txt  graphtrail-init.txt  graphtrail-sync.txt  md-lint.txt  md-status.txt  memory-doctor-check.cast  memory-doctor-check.json  miseledger-ledger.cast  miseledger-ledger.json  ml-import.txt  ml-init.txt  ml-search.txt  ml-stats.txt  (+20 more)
src/plating/: __init__.py  cast.py  cli.py  render.py  scan.py  spec.py
tests/: test_cast.py  test_scan.py
