[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "plating"
version = "0.1.0"
description = "Reproducible, sanitized terminal-demo SVGs for READMEs and websites."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Solomon Neas", email = "me@solomonneas.dev" }]
keywords = ["terminal", "asciicast", "svg", "demo", "readme", "screencast", "docs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Multimedia :: Graphics",
]
dependencies = []

[project.scripts]
plating = "plating.cli:main"

[project.urls]
Homepage = "https://github.com/escoffier-labs/plating"
Issues = "https://github.com/escoffier-labs/plating/issues"

[tool.setuptools.packages.find]
where = ["src"]
